// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnsibleRole should render a role to add 1`] = `
<ListViewItem
  actions={
    <button
      className="role-add-remove-btn"
      href="#"
      onClick={[Function]}
    >
      <Icon
        className="fa-2x"
        name="fa fa-plus-circle"
        type="fa"
      />
    </button>
  }
  additionalInfo={null}
  checkboxInput={null}
  className="listViewItem--listItemVariants"
  compoundExpand={false}
  compoundExpanded={false}
  description={null}
  heading="test.role"
  hideCloseIcon={false}
  id={5}
  initExpanded={false}
  leftContent={null}
  onCloseCompoundExpand={[Function]}
  onExpand={[Function]}
  onExpandClose={[Function]}
  stacked={true}
/>
`;

exports[`AnsibleRole should render a role to remove 1`] = `
<ListViewItem
  actions={
    <button
      className="role-add-remove-btn"
      href="#"
      onClick={[Function]}
    >
      <Icon
        className="fa-2x"
        name="fa fa-minus-circle"
        type="fa"
      />
    </button>
  }
  additionalInfo={null}
  checkboxInput={null}
  className="listViewItem--listItemVariants"
  compoundExpand={false}
  compoundExpanded={false}
  description={null}
  heading="test.role"
  hideCloseIcon={false}
  id={5}
  initExpanded={false}
  leftContent={null}
  onCloseCompoundExpand={[Function]}
  onExpand={[Function]}
  onExpandClose={[Function]}
  stacked={true}
/>
`;

exports[`AnsibleRole should render inherited role to remove 1`] = `
<ListViewItem
  actions=""
  additionalInfo={null}
  checkboxInput={null}
  className="listViewItem--listItemVariants ansible-role-disabled"
  compoundExpand={false}
  compoundExpanded={false}
  description={null}
  heading="test.role"
  hideCloseIcon={false}
  id={5}
  initExpanded={false}
  leftContent={null}
  onCloseCompoundExpand={[Function]}
  onExpand={[Function]}
  onExpandClose={[Function]}
  stacked={true}
/>
`;
